Bug 870902 - [MMS] [UX] Compose: Contacts suggestions has a wrong font. Should be the one designed for our OS. - r=gnarf
Closes gh-10027
(cherry picked from commit 021032e0ad73b7837b5fb92832ebb43b63608001)

--- a/apps/sms/style/custom_dialog.css
+++ b/apps/sms/style/custom_dialog.css
@@ -47,7 +47,7 @@ body[role="application"] [role="dialog"]:not([data-type="edit"]) h3 {
   color: #FFFFFF;
   font-family: 'MozTT',Sans-serif;
   font-size: 1.6rem;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 1em;
   margin: 0 0 1rem;
   padding-bottom: 1rem;
